fixed about page, home button still tiny on mobile:

--- a/bootStrapexample_files/album.css
+++ b/bootStrapexample_files/album.css
@@ -76,3 +76,7 @@ header {
   border-radius: 3.5vw;
   vertical-align: middle;
 }
+
+html, body {
+  background-repeat: no-repeat;
+}
